--- a/circle.yml
+++ b/circle.yml
@@ -10,13 +10,9 @@ jobs:
       - checkout
 
       - run:
-          name: Change directory
-          command: cd lambda
-
-      - run:
           name: Install dependencies
-          command: go get -v
+          command: cd lambda && go get -v
 
       - run:
           name: Run Unit Tests
-          command: go test
+          command: cd lambda && go test
