--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: go get -v
+          command: ls && go get -v
 
       - run:
           name: Run Unit Tests
